# Journeyman-Jobs

./: .env.example  .gitignore  .mcp.json  .memory  .opencode.json  .roomodes  ADAPTIVE_TAILBOARD_THEME_IMPLEMENTATION.md  ADAPTIVE_TAILBOARD_THEME_SUMMARY.md  ADAPTIVE_THEME_USAGE_EXAMPLE.md  AGENTS.md  ANALYSIS_SUMMARY.md  API_KEY_ROTATION_REQUIRED.md  AUTHENTICATION_SYSTEM_ROOT_CAUSE_ANALYSIS.html  AUTHENTICATION_SYSTEM_ROOT_CAUSE_ANALYSIS.md  AUTH_STATE_MANAGEMENT_ROOT_CAUSE_ANALYSIS.md  BACKEND_IMPLEMENTATION_REPORT.html  BACKEND_OPERATIONS_ROOT_CAUSE_ANALYSIS.html  BACKEND_OPERATIONS_ROOT_CAUSE_ANALYSIS.md  BUG_FIXES_SUMMARY.md  BUTTON_FIX_GUIDE.md  CHANGELOG.md  CLAUDE.md  CODEBASE_ANALYSIS_REPORT.html  CODEBASE_ANALYSIS_REPORT.md  COMPILATION_ERROR_SOLUTION.md  COMPILATION_FIX_PLAN.md  COMPREHENSIVE_CODEBASE_REPORT.md  CONNECTIVITY_SERVICE_IMPLEMENTATION.md  CONTRADICTIONS_REPORT.md  CREWS_FEATURE_E2E_ANALYSIS.md  CREWS_QUICKSTART_VALIDATION_REPORT.html  CREW_COMMUNICATION_IMPLEMENTATION.md  CREW_INVITATION_MESSAGING_ANALYSIS_REPORT.html  CRITICAL_FIXES_VALIDATION_REPORT.md  DEBUG_DOMAIN_STATUS_REPORT.md  ELECTRICAL_ILLUSTRATIONS_IMPLEMENTATION_GUIDE.md  ELECTRICAL_ILLUSTRATIONS_IMPLEMENTATION_STATUS.md  ERROR_DETECTIVE_INVESTIGATION.md  ERROR_DETECTIVE_RISK_ANALYSIS.html  ERROR_FORENSICS_REPORT.md  (+124 more)
.bmad-core/: install-manifest.yaml
.bmad-creative-writing/: install-manifest.yaml
.bmad-infrastructure-devops/: install-manifest.yaml
.claude/: .settings.json  COMMANDS.md  FLAGS.md  MODES.md  ORCHESTRATOR.md  RULES.md  Super_Claude_Docs.md  launch-frontend-swarm.sh  (+4 more)
(+2247 files in other folders)
