[project]
name = "journeyman-jobs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.9"
dependencies = [
    "anthropic>=0.71.0",
    "elevenlabs>=2.18.0",
    "google-cloud>=0.34.0",
    "google-cloud-firestore>=2.21.0",
    "google-generativeai>=0.8.5",
    "openai>=2.5.0",
    "pocketsphinx>=5.0.4",
    "pyaudio>=0.2.14",
    "speechrecognition>=3.14.3",
]
